WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170458
[GTK] PLATFORM(GTK) && !USE(COORDINATED_GRAPHICS_THREADED) is no longer possible
https://bugs.webkit.org/show_bug.cgi?id=170458
Summary
[GTK] PLATFORM(GTK) && !USE(COORDINATED_GRAPHICS_THREADED) is no longer possible
Carlos Garcia Campos
Reported
2017-04-04 10:52:09 PDT
That is not supported anymore, so we can remove dead code from VideoSinkGStreamer.cpp
Attachments
Patch
(1.49 KB, patch)
2017-04-04 10:53 PDT
,
Carlos Garcia Campos
clopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-04-04 10:53:19 PDT
Created
attachment 306179
[details]
Patch
Carlos Garcia Campos
Comment 2
2017-04-04 11:01:16 PDT
Committed
r214885
: <
http://trac.webkit.org/changeset/214885
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug