[GTK] PLATFORM(GTK) && !USE(COORDINATED_GRAPHICS_THREADED) is no longer possible https://bugs.webkit.org/show_bug.cgi?id=170458

Reviewed by Carlos Alberto Lopez Perez.

That is not supported anymore, so we can remove dead code from VideoSinkGStreamer.cpp

* platform/graphics/gstreamer/VideoSinkGStreamer.cpp:
(VideoRenderRequestScheduler::VideoRenderRequestScheduler):

Canonical link: https://commits.webkit.org/187371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214885 268f45cc-cd09-0410-ab3c-d52691b4dbfc